force-app/main/default/objects/Guarantor__c/Guarantor__c.object-meta.xml
<CustomObject>
    <label>Guarantor</label>
    <nameField>
        <displayFormat>G-{0000}</displayFormat>
        <label>Guarantor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Guarantors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>