force-app/main/default/objects/Guarantor__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>Ambiguous</fullName>
                <isActive>false</isActive>
                <label>Ambiguous</label>
            </value>
            <value>
                <fullName>Female</fullName>
                <isActive>false</isActive>
                <label>Female</label>
            </value>
            <value>
                <fullName>Male</fullName>
                <isActive>false</isActive>
                <label>Male</label>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
                <isActive>false</isActive>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Unknown</fullName>
                <isActive>false</isActive>
                <label>Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>