force-app/main/default/objects/Guarantor__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <label>Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>19</fullName>
                <label>Child</label>
            </value>
            <value>
                <fullName>62</fullName>
                <label>Daughter</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Employee</label>
            </value>
            <value>
                <fullName>52</fullName>
                <label>Employer</label>
            </value>
            <value>
                <fullName>33</fullName>
                <label>Father</label>
            </value>
            <value>
                <fullName>65</fullName>
                <label>Husband</label>
            </value>
            <value>
                <fullName>32</fullName>
                <label>Mother</label>
            </value>
            <value>
                <fullName>99</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>34</fullName>
                <label>Other Adult</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Self</label>
            </value>
            <value>
                <fullName>29</fullName>
                <label>Significant Error</label>
            </value>
            <value>
                <fullName>69</fullName>
                <label>Son</label>
            </value>
            <value>
                <fullName>01</fullName>
                <label>Spouse</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>Unknowns</label>
            </value>
            <value>
                <fullName>70</fullName>
                <label>Wife</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>