force-app/main/default/objects/Guarantor__c/fields/SNN__c.field-meta.xml
<CustomField>
    <fullName>SNN__c</fullName>
    <label>SNN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>