force-app/main/default/objects/Guarantor__c/fields/Use_Same_Address_As_Patient__c.field-meta.xml
<CustomField>
    <fullName>Use_Same_Address_As_Patient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Same Address As Patient</label>
    <type>Checkbox</type>
</CustomField>