force-app/main/default/objects/Guarantor__c/validationRules/Address_Not_NULL.validationRule-meta.xml
<ValidationRule>
    <fullName>Address_Not_NULL</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISPICKVAL( Relationship__c ,&apos;18&apos;)|| Use_Same_Address_As_Patient__c =true,false ,IF( Address__c=null || Address__c=&apos;&apos; , true, false))</errorConditionFormula>
    <errorDisplayField>Address__c</errorDisplayField>
    <errorMessage>Address should not be Empty</errorMessage>
</ValidationRule>