force-app/main/default/objects/Guarantor__c/validationRules/DOB_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>DOB_validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISPICKVAL( Relationship__c ,&apos;18&apos;),false ,IF(   ISBLANK(DOB__c), true, false))</errorConditionFormula>
    <errorDisplayField>DOB__c</errorDisplayField>
    <errorMessage>This field is mandatory.</errorMessage>
</ValidationRule>