force-app/main/default/objects/Guarantor__c/validationRules/First_Name_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISPICKVAL( Relationship__c ,&apos;18&apos;),false ,IF(  First_Name__c =null ||  First_Name__c =&apos;&apos; , true, false))</errorConditionFormula>
    <errorDisplayField>First_Name__c</errorDisplayField>
    <errorMessage>This field is mandatory.</errorMessage>
</ValidationRule>