force-app/main/default/objects/Guarantor__c/validationRules/Gender_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Gender_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISPICKVAL( Relationship__c ,&apos;18&apos;),false ,IF(   ISPICKVAL( Gender__c , &apos;&apos;) , true, false))</errorConditionFormula>
    <errorDisplayField>Gender__c</errorDisplayField>
    <errorMessage>This field is mandatory.</errorMessage>
</ValidationRule>