force-app/main/default/objects/Guarantor__c/validationRules/GuarantorAccount.validationRule-meta.xml
<ValidationRule>
    <fullName>GuarantorAccount</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL( Account__c )</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Mandatory Field</errorMessage>
</ValidationRule>