force-app/main/default/objects/Guarantor__c/validationRules/PhoneNotGreater_than_10.validationRule-meta.xml
<ValidationRule>
    <fullName>PhoneNotGreater_than_10</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISPICKVAL( Relationship__c , &apos;18&apos;) ,false,  IF( LEN( Phone__c )=10,false,true ) )</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>Phone should be of 10 digits.</errorMessage>
</ValidationRule>