force-app/main/default/objects/Guarantor__c/validationRules/Relationship_Validaton.validationRule-meta.xml
<ValidationRule>
    <fullName>Relationship_Validaton</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISPICKVAL( Relationship__c , &apos;&apos;) , true, false)</errorConditionFormula>
    <errorDisplayField>Relationship__c</errorDisplayField>
    <errorMessage>This field is mandatory.</errorMessage>
</ValidationRule>