force-app/main/default/objects/Guarantor__c/validationRules/State_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>State_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISPICKVAL( Relationship__c ,&apos;18&apos;)|| Use_Same_Address_As_Patient__c =true,false ,IF(  State__c =null ||  State__c =&apos;&apos; , true, false))</errorConditionFormula>
    <errorDisplayField>State__c</errorDisplayField>
    <errorMessage>This field is mandatory.</errorMessage>
</ValidationRule>