force-app/main/default/objects/Guarantor__c/validationRules/ZipValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ZipValidation</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISPICKVAL( Relationship__c ,&apos;18&apos;)||  Use_Same_Address_As_Patient__c =true,false ,If(LEN(Zip__c)=5 || LEN( Zip__c )=9,false,true))</errorConditionFormula>
    <errorDisplayField>Zip__c</errorDisplayField>
    <errorMessage>Zip code size should be 5 or 9</errorMessage>
</ValidationRule>